k8s/app_python/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-python
  labels:
    app: app-python
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app-python
  template:
    metadata:
      labels:
        app: app-python
    spec:
      containers:
        - name: app-python
          image: darrpyy/devops:latest
          ports:
            - containerPort: 8001
