k8s/app_python/py-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moscow-time-app
  labels:
    app: moscow-time-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moscow-time-app
  template:
    metadata:
      labels:
        app: moscow-time-app
    spec:
      containers:
      - name: moscow-time-app
        image: ali12hamdan/moscow-time-app:latest
        ports:
        - containerPort: 5001
