k8s/app_python/python-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-python
  labels:
    app: app-python
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-python
  template:
    metadata:
      labels:
        app: app-python
    spec:
      containers:
      - name: app-python
        image: ali12hamdan/app_python:app_python-prod-1.0.0
        ports:
        - containerPort: 5000
