k8s/app_python/py-service.yml
apiVersion: v1
kind: Service
metadata:
  name: moscow-time-app-service
spec:
  selector:
    app: moscow-time-app
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
