k8s/app_python/python-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-python-service
spec:
  selector:
    app: app-python
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
