k8s/app_python/service.k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: app-piton-service
spec:
  type: NodePort
  selector:
    app: app-piton
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8080
