k8s/app_python/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-python
spec:
  type: LoadBalancer
  selector:
    app: app-python
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
