k8s/app_python/services.yml
apiVersion: v1
kind: Service
metadata:
  name: app-python-service
  labels:
    app: app-python
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: app-python
