k8s/app_python/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watch-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: watch.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: watch-service
            port:
              number: 5000
