k8s/app_python/python-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-python-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app-python.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-python-service
                port:
                  number: 5000
